@@ -118,4 +118,4 @@ export(graph.isoclass, graph.isomorphic, graph.motifs,
 
 # operators
 
-export(graph.union, "%u%")
+export(graph.union, "%du%", graph.intersection, "%s%")
