@@ -1,3 +1,10 @@
+2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/operators.R (graph.intersection, "%s%") : added
+	("%u%", "%du%") : "%u%" renamed to "%du%"
+	* interfaces/R/src/rinterface.c (R_igraph_intersection) : added
+	(R_igraph_union) : updated
+
 2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/operators.R (igraph.union, "%u%") : added
